--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <h1>Syed Aleem Hussain</h1>
-        <p>Graduate,Karachi University,PK</p>
-        <p>Lead Developer at 10Pearls</p>
+        <h4>Graduate,Karachi University,PK</h4>
+        <h4>Lead Developer at 10Pearls</h4>
 
     </header>
     <main>
@@ -29,9 +29,9 @@
         </ul>
         <h2>Work Experience</h2>
         <ul>
-            <li>Lead/ Senior Software Developer - 10Pearls</li>
-            <li>Senior JavaScript Front-End Developer - Contour Software</li>
-            <li>Software Engineer Dot NET - Agilosoft Company</li>
+            <li>Lead/ Senior Software Developer - <strong>10Pearls</strong> - Sep 2016 till present</li>
+            <li>Senior JavaScript Front-End Developer - <strong>Contour Software</strong> - Aug 2013 to May 2016</li>
+            <li>Software Engineer Dot NET - <strong>Agilosoft Company</strong> - Jan 2009 to Mar 2013</li>
         </ul>
         <h2>Languages</h2>
         <ul>
